--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Methods for Adding CSS</title>
   </head>
-  <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
-  </body>
+    <style>
+      p {
+        color: white;
+        background-color: green;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 40px;
+      }
+    </style>
+    
+     <body>
+      <div>Style me via the external method!</div>
+      <p>I would like to be styled with the internal method, please.</p>
+      <button style="color: black; font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: orange; text-align: center; font-size: 40px; font-weight: 400; border: 4px outset lightgray;">Inline Method</button>
+    </body>
+
 </html>
